Portainer port mapping

--- a/docker-compose -local.yml
+++ b/docker-compose -local.yml
@@ -3,8 +3,8 @@ version: '2'
 services:
   portainer:
     image: portainer/portainer
-    expose:
-      - "9000"
+    ports:
+      - "9000:9000"
     command: -H unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
